# NGPS_PIPE

./: README.md  environment.yml  pyproject.toml  setup.cfg  setup.py
ngps_pipe/: adjust_splicing.py  coadding.py  fix_headers.py  fluxing.py  gui_helpers.py  manual_aperture.py  manual_splice.py  manual_tracing.py  ngps_fits_correct.py  p200_redux.py  qa.py  quicklook.py  reduction.py  show_spectrum.py  splicing.py  table_edit.py  telluric.py  trim.py  version.py
ngps_pipe/tests/: test_coadding.py  test_fluxing.py  test_quicklook.py  test_splicing.py  test_table_edit.py
