[metadata]
name = NGPS_PIPE
description = "Automated Data Reduction Pipeline for Palomar's NGPS"
long_description = file: README.md
long_description_content_type = text/markdown
author = Frank Verdi
author_email = fverdi@caltech.edu
license = BSD-3
license_file = LICENSE
url = https://github.com/FrankVerdi/NGPS_PIPE/tree/main
github_project = FrankVerdi/NGPS_PIPE

[options]
zip_safe = False
use_2_to_3 = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
include_package_data = True
install_requires=
    numpy
    astropy
    scipy
    matplotlib
    configobj
    packaging
    pytest
    yattag
    pypeit
    tqdm

[options.package_data]
* = data/*

[options.entry_points]
console_scripts =
    ngps_reduce = ngps_pipe.p200_redux:entrypoint
    ngps_ql = ngps_pipe.quicklook:entrypoint
    ngps_show = ngps_pipe.show_spectrum:entrypoint
    ngps_adjust_splicing = ngps_pipe.adjust_splicing:entrypoint
    ngps_splice = ngps_pipe.manual_splice:entrypoint
    ngps_trim = ngps_pipe.trim:entrypoint
